fix: [SOCKETDEV-2] websocket server now officially connects

--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
 
         <pre id="messages"></pre>
     </main>
-    <script src="app.js"></script>
+    <script src="public/js/app.js"></script>
   </body>
 </html>
