feat: [SOCKETDEV-4] implemented very basic authorization thru cookies and route parameters

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
         <button id="ws-close">
             Close Connection
         </button>
+        <button id="ws-login">
+          Login
+      </button>  
+      <button id="ws-logout">
+          Logout
+      </button>
+      <button id="ws-open-tk">
+        Open Token Connection
+    </button>
         <div class="input-block">
             <input type="text" id="ws-input">
             <button id="ws-send">
